--- a/src/index.scss
+++ b/src/index.scss
@@ -10,19 +10,37 @@
 }
 
 html, body {
-	height: 100%;
+	min-height: 100%;
 }
 
 body {
 	background: #0f132f;
-}
 
-@supports (background: linear-gradient(to bottom right, #0f132f 0%, #003366 100%)) {
-	body {
+	@supports (background: linear-gradient(to bottom right, #0f132f 0%, #003366 100%)) {
 		background: linear-gradient(to bottom right, #0f132f 0%, #003366 100%);
 	}
 }
 
 a {
 	text-decoration: none;
+}
+
+noscript {
+	margin-top: 30px;
+  color: white;
+  text-align: center;
+}
+
+.container {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	min-height: 100vh;
+}
+
+.page-content {
+	flex: 1;
+	width: 100%;
+	max-width: 100vw;
+	height: 100%;
 }
