--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@
   padding: 0;
 	font-family: 'Montserrat', sans-serif;
 	box-sizing: border-box;
+	color: white;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
@@ -43,4 +44,9 @@ noscript {
 	width: 100%;
 	max-width: 100vw;
 	height: 100%;
+	padding: 10px;
+}
+
+.yearly-title {
+	font-family: 'Pacifico', cursive;
 }
