--- a/src/components/button/index.scss
+++ b/src/components/button/index.scss
@@ -5,6 +5,7 @@
 	font-size: 20px;
 	transition: 0.3s;
 	border: 3px solid #064061;
+	color: white;
 
 	&.button-solid {
 		background-color: #064061;
