--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,6 @@
   padding: 0;
 	font-family: 'Montserrat', sans-serif;
 	box-sizing: border-box;
-	color: white;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
@@ -40,6 +39,8 @@ noscript {
 }
 
 .page-content {
+	display: flex;
+	justify-content: center;
 	flex: 1;
 	width: 100%;
 	max-width: 100vw;
