--- a/src/containers/login/index.scss
+++ b/src/containers/login/index.scss
@@ -3,13 +3,38 @@
 	align-items: center;
 	flex-direction: column;
 	flex: 1;
-	height: 100%;
+	padding-top: 60px;
+
+	@media only screen and (max-width: 770px) {
+		padding-top: 10px;
+	}
 
 	.card {
 		padding: 10px;
 
+		@supports not (all: inherit) {
+			form {
+				display: flex;
+				align-items: center;
+				flex-direction: column;
+			}
+		}
+
 		h1 {
 			text-align: center;
+
+			@media only screen and (max-width: 440px) {
+				font-size: 7vw;
+			}
+		}
+
+		.text-input {
+			max-width: 400px;
+			margin: 20px;
+		}
+
+		.button {
+			margin: 10px;
 		}
 	}
 }
