--- a/src/components/button/index.scss
+++ b/src/components/button/index.scss
@@ -4,6 +4,7 @@
 	font-weight: bold;
 	font-size: 20px;
 	transition: 0.3s;
+	opacity: 1;
 	border: 3px solid #064061;
 	color: white;
 	cursor: pointer;
@@ -27,5 +28,15 @@
 		width: 100%;
 		max-width: 400px;
 		border-radius: 10px;
+	}
+
+	&.button-disabled {
+		cursor: default;
+		opacity: 0.7;
+
+		&:hover {
+			background-color:	#064061;
+			border: 3px solid #064061;
+		}
 	}
 }
