--- a/src/components/text-input/index.scss
+++ b/src/components/text-input/index.scss
@@ -5,11 +5,12 @@
 	font-size: 20px;
 	outline: none;
 	border: none;
-	border-bottom: 1px solid #a7a7a7;
+	border: 1px solid #a7a7a7;
+	border-radius: 10px;
 	transition: 0.5s;
 
 	&:focus {
-		border-bottom: 1px solid black;
+		border: 1px solid black;
 	}
 
 	&::placeholder {
