--- a/src/containers/dashboard/index.scss
+++ b/src/containers/dashboard/index.scss
@@ -1,3 +1,10 @@
+@mixin wrapText {
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	word-break: break-word;
+	hyphens: auto;
+}
+
 .dash-content {
 	display: flex;
 	align-items: center;
@@ -10,6 +17,10 @@
 
 	h2 {
 		margin-top: 15px;
+	}
+
+	.activities {
+		font-weight: bold;
 	}
 
 	.card {
@@ -46,74 +57,16 @@
 			width: 100%;
 			margin-left: 20px;
 			font-size: 18px;
+
+			@include wrapText;
 		}
 	}
-
-	.mood {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		min-width: 50px;
-		min-height: 50px;
-		max-height: 50px;
-		background-color: gray;
-		border-radius: 100%;
-		transition: 0.3s;
-		cursor: pointer;
-
-		@media only screen and (max-width: 400px) {
-			width: 10vw;
-			height: 10vw;
-		}
-
-		&:hover {
-			opacity: 0.7;
-			box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-		}
-
-		img {
-			width: 30px;
-			height: 30px;
-		}
-	}
-
-	.mood-0 {background-color: #cc3131}
-	.mood-1 {background-color: #ff9a13}
-	.mood-2 {background-color: #fffc00}
-	.mood-3 {background-color: #21eb00}
-	.mood-4 {background-color: #128000}
 
 	.day-items {
-		width: 90%;
-	}
-
-	.item {
 		display: flex;
-		align-items: center;
-		width: 100%;
+		justify-content: center;
+		width: 90%;
 		margin-top: 10px;
 		margin-bottom: 10px;
-
-		.item-icon {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			min-width: 50px;
-			max-width: 50px;
-			min-height: 50px;
-			max-height: 50px;
-			background-color: gray;
-			border-radius: 100%;
-			margin-right: 10px;
-
-			img {
-				width: 35px;
-				height: 35px;
-			}
-		}
-
-		p {
-			margin: 10px;
-		}
 	}
 }
