Added login and advanced item modal
* Added basic login system with yearly api
* Added more advanced item modal for adding, editing and deleting objects from active day entry

--- a/src/containers/dashboard/index.scss
+++ b/src/containers/dashboard/index.scss
@@ -65,8 +65,13 @@
 	.day-items {
 		display: flex;
 		justify-content: center;
+		flex-wrap: wrap;
 		width: 90%;
 		margin-top: 10px;
 		margin-bottom: 10px;
+	}
+
+	.item {
+		margin-top: 10px;
 	}
 }
