--- a/src/components/modal/index.scss
+++ b/src/components/modal/index.scss
@@ -1,15 +1,22 @@
 .modal-container {
 	z-index: 999;
-	display: flex;
 	justify-content: center;
-	align-items: center;
 	width: 100%;
 	height: 100vh;
 	background-color: rgba(0, 0, 0, 0.8);
 	position: fixed;
 	top: 0;
 
+	& + body {
+		overflow: hidden;
+	}
+
 	.card {
+		max-height: 70vh;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 20px;
+
 		.title-display {
 			display: flex;
 			align-items: center;
