--- a/src/components/nav-route/index.scss
+++ b/src/components/nav-route/index.scss
@@ -41,6 +41,7 @@
 		margin-left: auto;
 
 		@media only screen and (max-width: 770px) {
+			flex-direction: column;
       margin-left: 0px;
       margin-top: 20px;
     }
