--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,7 @@
 
 html, body {
 	min-height: 100%;
+	width: 100%;
 }
 
 body {
@@ -58,6 +59,10 @@ form {
 	max-width: 100vw;
 	height: 100%;
 	padding: 10px;
+}
+
+.error-message {
+	font-weight: bold;
 }
 
 .yearly-title {
