--- a/src/components/button/index.scss
+++ b/src/components/button/index.scss
@@ -8,6 +8,7 @@
 	border: 3px solid #064061;
 	color: white;
 	cursor: pointer;
+	user-select: none;
 
 	&.button-solid {
 		background-color: #064061;
