--- a/src/components/modal/index.scss
+++ b/src/components/modal/index.scss
@@ -1,18 +1,18 @@
 .modal-container {
 	z-index: 999;
-	justify-content: center;
 	width: 100%;
 	height: 100vh;
 	background-color: rgba(0, 0, 0, 0.8);
 	position: fixed;
 	top: 0;
+	left: 0;
 
 	& + body {
 		overflow: hidden;
 	}
 
 	.card {
-		max-height: 70vh;
+		max-height: 80%;
 		margin-left: auto;
 		margin-right: auto;
 		margin-top: 20px;
