--- a/src/index.scss
+++ b/src/index.scss
@@ -34,6 +34,13 @@ noscript {
 
 form {
 	all: inherit;
+
+	@supports not (all: inherit) {
+		display: inherit;
+		flex-direction: inherit;
+		align-items: inherit;
+		width: inherit;
+	}
 }
 
 .separate-line {
