--- a/src/index.scss
+++ b/src/index.scss
@@ -22,9 +22,7 @@ body {
 	}
 }
 
-a {
-	text-decoration: none;
-}
+a {text-decoration: none;}
 
 noscript {
 	margin-top: 30px;
@@ -33,14 +31,10 @@ noscript {
 }
 
 form {
-	all: inherit;
-
-	@supports not (all: inherit) {
-		display: inherit;
-		flex-direction: inherit;
-		align-items: inherit;
-		width: inherit;
-	}
+	display: inherit;
+	flex-direction: inherit;
+	align-items: inherit;
+	width: inherit;
 }
 
 .separate-line {
@@ -68,7 +62,11 @@ form {
 	padding: 10px;
 }
 
-.error-message {
+.not-found {
+	color: white;
+}
+
+.input-message {
 	font-weight: bold;
 }
 
