Added nprogress and delete day function
* Added nprogress for loading bars and stuff
* Added a delete day function in activedayentry for future use

--- a/src/index.scss
+++ b/src/index.scss
@@ -37,6 +37,14 @@ form {
 	width: inherit;
 }
 
+#nprogress .bar {
+  background-color: #0a6acc;
+}
+
+#nprogress .peg {
+  box-shadow: none;
+}
+
 .separate-line {
 	width: 90%;
 	max-width: 500px;
