--- a/src/components/day-entry/index.scss
+++ b/src/components/day-entry/index.scss
@@ -100,17 +100,16 @@
 			}
 		}
 
-		.save-button {
+		.options-buttons {
 			display: flex;
 			align-items: center;
-			justify-content: flex-end;
-			width: 100%;
-			padding-left: 10px;
+			align-self: flex-end;
+			margin-top: 10px;
+			margin-right: 30px;
 			text-align: right;
 
-			.button, p {
-				float: right;
-				margin-right: 30px;
+			.button {
+				margin-left: 10px;
 			}
 		}
 	}
