--- a/src/components/loading-icon/index.scss
+++ b/src/components/loading-icon/index.scss
@@ -4,83 +4,83 @@
   height: 64px;
   position: relative;
 	margin: 20px;
-}
 
-.loading-icon div {
-  transform-origin: 32px 32px;
-  animation: loading-icon 1.2s linear infinite;
-}
+	div {
+	  transform-origin: 32px 32px;
+	  animation: loading-icon 1.2s linear infinite;
 
-.loading-icon div:after {
-	display: block;
-	width: 5px;
-  height: 14px;
-  content: " ";
-  position: absolute;
-  top: 3px;
-  left: 29px;
-  border-radius: 20%;
-  background: #fff;
-}
+		&:after {
+			display: block;
+			width: 5px;
+		  height: 14px;
+		  content: " ";
+		  position: absolute;
+		  top: 3px;
+		  left: 29px;
+		  border-radius: 20%;
+		  background: #fff;
+		}
 
-.loading-icon div:nth-child(1) {
-  transform: rotate(0deg);
-  animation-delay: -1.1s;
-}
+		&:nth-child(1) {
+		  transform: rotate(0deg);
+		  animation-delay: -1.1s;
+		}
 
-.loading-icon div:nth-child(2) {
-  transform: rotate(30deg);
-  animation-delay: -1s;
-}
+		&:nth-child(2) {
+		  transform: rotate(30deg);
+		  animation-delay: -1s;
+		}
 
-.loading-icon div:nth-child(3) {
-  transform: rotate(60deg);
-  animation-delay: -0.9s;
-}
+		&:nth-child(3) {
+		  transform: rotate(60deg);
+		  animation-delay: -0.9s;
+		}
 
-.loading-icon div:nth-child(4) {
-  transform: rotate(90deg);
-  animation-delay: -0.8s;
-}
+		&:nth-child(4) {
+		  transform: rotate(90deg);
+		  animation-delay: -0.8s;
+		}
 
-.loading-icon div:nth-child(5) {
-  transform: rotate(120deg);
-  animation-delay: -0.7s;
-}
+		&:nth-child(5) {
+		  transform: rotate(120deg);
+		  animation-delay: -0.7s;
+		}
 
-.loading-icon div:nth-child(6) {
-  transform: rotate(150deg);
-  animation-delay: -0.6s;
-}
+		&:nth-child(6) {
+		  transform: rotate(150deg);
+		  animation-delay: -0.6s;
+		}
 
-.loading-icon div:nth-child(7) {
-  transform: rotate(180deg);
-  animation-delay: -0.5s;
-}
+		&:nth-child(7) {
+		  transform: rotate(180deg);
+		  animation-delay: -0.5s;
+		}
 
-.loading-icon div:nth-child(8) {
-  transform: rotate(210deg);
-  animation-delay: -0.4s;
-}
+		&:nth-child(8) {
+		  transform: rotate(210deg);
+		  animation-delay: -0.4s;
+		}
 
-.loading-icon div:nth-child(9) {
-  transform: rotate(240deg);
-  animation-delay: -0.3s;
-}
+		&:nth-child(9) {
+		  transform: rotate(240deg);
+		  animation-delay: -0.3s;
+		}
 
-.loading-icon div:nth-child(10) {
-  transform: rotate(270deg);
-  animation-delay: -0.2s;
-}
+		&:nth-child(10) {
+		  transform: rotate(270deg);
+		  animation-delay: -0.2s;
+		}
 
-.loading-icon div:nth-child(11) {
-  transform: rotate(300deg);
-  animation-delay: -0.1s;
-}
+		&:nth-child(11) {
+		  transform: rotate(300deg);
+		  animation-delay: -0.1s;
+		}
 
-.loading-icon div:nth-child(12) {
-  transform: rotate(330deg);
-  animation-delay: 0s;
+		&:nth-child(12) {
+		  transform: rotate(330deg);
+		  animation-delay: 0s;
+		}
+	}
 }
 
 @keyframes loading-icon {
