--- a/src/components/button/index.scss
+++ b/src/components/button/index.scss
@@ -1,4 +1,5 @@
 .button {
+	display: inline-block;
 	padding: 5px;
 	border-radius: 5%;
 	font-weight: bold;
@@ -29,6 +30,7 @@
 		width: 100%;
 		max-width: 400px;
 		border-radius: 10px;
+		text-align: center;
 	}
 
 	&.button-disabled {
