--- a/src/components/loading-icon/index.scss
+++ b/src/components/loading-icon/index.scss
@@ -81,13 +81,28 @@
 		  animation-delay: 0s;
 		}
 	}
+
+	@keyframes loading-icon {
+	  0% {
+	    opacity: 1;
+	  }
+	  100% {
+	    opacity: 0;
+	  }
+	}
 }
 
-@keyframes loading-icon {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
+.loading-icon-mini {
+	width: 20px;
+	height: 20px;
+	border: 3px solid white;
+	border-top: 3px solid black;
+	border-left: 3px solid black;
+	border-radius: 50%;
+	animation: spin 1s linear infinite;
+
+	@keyframes spin {
+		0% { transform: rotate(0deg); }
+		100% { transform: rotate(360deg); }
+	}
 }
