--- a/src/containers/splash/index.scss
+++ b/src/containers/splash/index.scss
@@ -32,7 +32,7 @@
 
 	  .showcase-object {
 	    width: 300px;
-	    margin: 3vw;
+	    margin: 30px;
 	    padding: 10px;
 	    overflow: hidden;
 			text-align: center;
