Add basic new day function
* Added system to add new days to database (needs reload to show atm)
* Reworked date display with date-fns

--- a/src/components/day-entry/index.scss
+++ b/src/components/day-entry/index.scss
@@ -10,6 +10,7 @@
 }
 
 .date-display {
+	height: 44px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -35,6 +36,10 @@
 	&:hover {
 		opacity: 0.7
 	}
+}
+
+.activities {
+	font-weight: bold;
 }
 
 .day-editor {
