--- a/src/containers/dashboard/index.scss
+++ b/src/containers/dashboard/index.scss
@@ -17,8 +17,24 @@
 		}
 	}
 
-	.activities {
-		font-weight: bold;
+	.new-day {
+		width: 100%;
+		max-width: 600px;
+		margin: 10px;
+		text-align: center;
+		border: 1px dashed #a1a1a1;
+		color: #a1a1a1;
+		border-radius: 10px;
+		font-size: 30px;
+		opacity: 0.7;
+		user-select: none;
+		transition: 0.3s;
+		cursor: pointer;
+
+		&:hover {
+			opacity: 1;
+			background: rgba(255, 255, 255, 0.05);
+		}
 	}
 
 	.card {
