Added previous day adding
* Added a system to add previous days
* It's not very good
* I hate it

--- a/src/index.scss
+++ b/src/index.scss
@@ -45,6 +45,11 @@ form {
   box-shadow: none;
 }
 
+.toast-notification {
+	min-height: 50px;
+	border-radius: 10px;
+}
+
 .separate-line {
 	width: 90%;
 	max-width: 500px;
