Email verification system (#8)
* Added a message once the user has submitted their register request

* Added a route and page for /verify
* Added an API request for /verify to check on

* Added a mini loading icon to show that login/register is loading
* Fixed issues with API changes
* Moved some CSS for DRY

--- a/src/containers/register/index.scss
+++ b/src/containers/register/index.scss
@@ -1,8 +1,4 @@
 .register-content {
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	flex: 1;
 	padding-top: 60px;
 
 	@media only screen and (max-width: 770px) {
@@ -14,6 +10,14 @@
 
 		h1 {
 			color: black;
+		}
+
+		p {
+			text-align: center;
+
+			.bold {
+				font-weight: bold;
+			}
 		}
 
 		.form-section {
