--- a/src/containers/dashboard/index.scss
+++ b/src/containers/dashboard/index.scss
@@ -12,6 +12,26 @@
 		}
 	}
 
+	.dash-filters {
+		display: flex;
+		align-items: center;
+		width: 100%;
+		max-width: 600px;
+		padding-left: 10px;
+		margin-top: 10px;
+		color: white;
+
+		p {
+			@media only screen and (max-width: 600px) {
+				margin-right: 10px;
+			}
+		}
+
+		.text-input {
+				margin-left: auto
+		}
+	}
+
 	.new-day {
 		width: 100%;
 		max-width: 600px;
