Fix reload bug with searching
* Fixed a bug where searching would show old copies of entries which had been edited
* Reversed the gradient to make the Dashboard button more visible

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,8 +17,8 @@ html, body {
 body {
 	background: #0f132f;
 
-	@supports (background: linear-gradient(to right, #0f132f 0%, #003366 100%)) {
-		background: linear-gradient(to right, #0f132f 0%, #003366 100%);
+	@supports (background: linear-gradient(to left, #0f132f 0%, #003366 100%)) {
+		background: linear-gradient(to left, #0f132f 0%, #003366 100%);
 	}
 }
 
