--- a/src/components/button/index.scss
+++ b/src/components/button/index.scss
@@ -1,7 +1,7 @@
 .button {
 	display: inline-block;
 	padding: 5px;
-	border-radius: 5%;
+	border-radius: 3px;
 	font-weight: bold;
 	font-size: 20px;
 	transition: 0.3s;
