--- a/src/components/day-entry/index.scss
+++ b/src/components/day-entry/index.scss
@@ -23,18 +23,31 @@
 	font-size: 20px;
 	font-weight: bold;
 	position: relative;
-}
 
-.close-entry, .edit-entry {
-	width: 20px;
-	height: 20px;
-	position: absolute;
-	right: 15px;
-	cursor: pointer;
-	transition: 0.3s;
+	.manage-buttons {
+		display: flex;
+		position: absolute;
+		right: 15px;
 
-	&:hover {
-		opacity: 0.7
+		.close-entry, .edit-entry, .delete-entry {
+			width: 20px;
+			height: 20px;
+			cursor: pointer;
+			transition: 0.3s;
+
+			img {
+				width: 20px;
+				height: 20px;
+			}
+
+			&:hover {
+				opacity: 0.7
+			}
+		}
+
+		.close-entry {
+			margin-left: 5px;
+		}
 	}
 }
 
